# InverseIndex

./: pyproject.toml  tmp.py
Test/: file1.txt  file10.txt  file11.txt  file12.txt  file13.txt  file14.txt  file15.txt  file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
inverseindex/: generate_test.py  main.py  old_logic.py
inverseindex/Parser/: parser.py
inverseindex/Parser/InverseIndex/: InverseIndex.py  logic.py  optimizer.py  tokenizer.py
